# hse_se_233_12-longarith

./: CMakeLists.txt  Makefile  main.cpp
.github/workflows/: cmake-single-platform.yml
cmake/: Core.cmake
lib/: CMakeLists.txt  bigfloat.cpp  bigfloat.h  bigfloat.hpp  bigint.cpp  bigint.h  bigint.hpp  longarithmetic.hpp
src/: CMakeLists.txt  main.cpp  pi.cpp  pi.h
test/: CMakeLists.txt  test.cpp
test/cases/: comparator.cpp  constructor.cpp  getter.cpp  method.cpp  operator.cpp  pi_calc.cpp
